--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
-
+<ScrollView
+    android:layout_width=""
+    android:layout_height=""
     <EditText
         android:id="@+id/text"
         android:layout_width="0dp"
