--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<Toolbar
+    android:layout_width=""
+    android:layout_height=""/>
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
